[tool.poetry]
name = "grasp_docs"
version = "0.1.0"
description = "Documentation for GRASP"
authors = ["martamatos <marta.ra.matos@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
matplotlib = "^3.5.3"
altair = "^4.2.0"
Sphinx = "^5.1.1"
sphinx-cobra-theme = {git = "https://github.com/martamatos/sphinx_cobra_theme.git", rev = "76872ad63b72196509bd68ec4a82ea1bacb9abcf"}
sphinxcontrib-matlabdomain = "^0.14.1"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-fulltoc = "^1.2.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-napoleon = {git = "https://github.com/martamatos/sphinxcontrib-napoleon.git", rev = "2d9d0bb887679b296de28f712abe17f947fe5149"}
scipy = "^1.9.1"
docutils = "0.16"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
